Add customers/settings endpoint
