# src/Model/CustomersSettingsCustomerGroupSettings.php
@@ -1,0 +1,247 @@
+<?php
+/**
+ * CustomersSettingsCustomerGroupSettings
+ *
+ * @package  BigCommerce\Api\v3
+ */
+
+/**
+ * BigCommerce API
+ *
+ * A Swagger Document for the BigCommmerce v3 API.
+ *
+ * OpenAPI spec version: 3.0.0b
+ * 
+ * Generated by: https://github.com/swagger-api/swagger-codegen.git
+ *
+ */
+
+/**
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen
+ * Do not edit the class manually.
+ */
+
+namespace BigCommerce\Api\v3\Model;
+
+use \ArrayAccess;
+
+class CustomersSettingsCustomerGroupSettings implements ArrayAccess
+{
+    const DISCRIMINATOR = null;
+
+    /**
+      * The original name of the model.
+      * @var string
+      */
+    protected static $swaggerModelName = 'CustomersSettings_customer_group_settings';
+
+    /**
+      * Array of property to type mappings. Used for (de)serialization
+      * @var string[]
+      */
+    protected static $swaggerTypes = [
+        'guest_customer_group_id' => 'int',
+        'default_customer_group_id' => 'int'
+    ];
+
+    public static function swaggerTypes()
+    {
+        return self::$swaggerTypes;
+    }
+
+    /**
+     * Array of attributes where the key is the local name, and the value is the original name
+     * @var string[]
+     */
+    protected static $attributeMap = [
+        'guest_customer_group_id' => 'guest_customer_group_id',
+        'default_customer_group_id' => 'default_customer_group_id'
+    ];
+
+    /**
+     * Array of attributes to setter functions (for deserialization of responses)
+     * @var string[]
+     */
+    protected static $setters = [
+        'guest_customer_group_id' => 'setGuestCustomerGroupId',
+        'default_customer_group_id' => 'setDefaultCustomerGroupId'
+    ];
+
+    /**
+     * Array of attributes to getter functions (for serialization of requests)
+     * @var string[]
+     */
+    protected static $getters = [
+        'guest_customer_group_id' => 'getGuestCustomerGroupId',
+        'default_customer_group_id' => 'getDefaultCustomerGroupId'
+    ];
+
+    public static function attributeMap()
+    {
+        return self::$attributeMap;
+    }
+
+    public static function setters()
+    {
+        return self::$setters;
+    }
+
+    public static function getters()
+    {
+        return self::$getters;
+    }
+
+    
+
+    
+
+    /**
+     * Associative array for storing property values
+     * @var mixed[]
+     */
+    protected $container = [];
+
+    /**
+     * Constructor
+     * @param mixed[] $data Associated array of property values initializing the model
+     */
+    public function __construct(array $data = [])
+    {
+        $this->container['guest_customer_group_id'] = array_key_exists('guest_customer_group_id', $data) ? $data['guest_customer_group_id'] : null;
+        $this->container['default_customer_group_id'] = array_key_exists('default_customer_group_id', $data) ? $data['default_customer_group_id'] : null;
+    }
+
+    /**
+     * returns container
+     * @return array
+     */
+    public function get()
+    {
+        return $this->container;
+    }
+
+    /**
+     * show all the invalid properties with reasons.
+     *
+     * @return array invalid properties with reasons
+     */
+    public function listInvalidProperties()
+    {
+        $invalid_properties = [];
+        return $invalid_properties;
+    }
+
+    /**
+     * validate all the properties in the model
+     * return true if all passed
+     *
+     * @return bool True if all properteis are valid
+     */
+    public function valid()
+    {
+        return true;
+    }
+
+
+    /**
+     * Gets guest_customer_group_id
+     * @return int
+     */
+    public function getGuestCustomerGroupId()
+    {
+        return $this->container['guest_customer_group_id'];
+    }
+
+    /**
+     * Sets guest_customer_group_id
+     * @param int $guest_customer_group_id
+     * @return $this
+     */
+    public function setGuestCustomerGroupId($guest_customer_group_id)
+    {
+        $this->container['guest_customer_group_id'] = $guest_customer_group_id;
+
+        return $this;
+    }
+
+    /**
+     * Gets default_customer_group_id
+     * @return int
+     */
+    public function getDefaultCustomerGroupId()
+    {
+        return $this->container['default_customer_group_id'];
+    }
+
+    /**
+     * Sets default_customer_group_id
+     * @param int $default_customer_group_id
+     * @return $this
+     */
+    public function setDefaultCustomerGroupId($default_customer_group_id)
+    {
+        $this->container['default_customer_group_id'] = $default_customer_group_id;
+
+        return $this;
+    }
+    /**
+     * Returns true if offset exists. False otherwise.
+     * @param  integer $offset Offset
+     * @return boolean
+     */
+    public function offsetExists($offset)
+    {
+        return isset($this->container[$offset]);
+    }
+
+    /**
+     * Gets offset.
+     * @param  integer $offset Offset
+     * @return mixed
+     */
+    public function offsetGet($offset)
+    {
+        return isset($this->container[$offset]) ? $this->container[$offset] : null;
+    }
+
+    /**
+     * Sets value based on offset.
+     * @param  integer $offset Offset
+     * @param  mixed   $value  Value to be set
+     * @return void
+     */
+    public function offsetSet($offset, $value)
+    {
+        if (is_null($offset)) {
+            $this->container[] = $value;
+        } else {
+            $this->container[$offset] = $value;
+        }
+    }
+
+    /**
+     * Unsets offset.
+     * @param  integer $offset Offset
+     * @return void
+     */
+    public function offsetUnset($offset)
+    {
+        unset($this->container[$offset]);
+    }
+
+    /**
+     * Gets the string presentation of the object
+     * @return string
+     */
+    public function __toString()
+    {
+        if (defined('JSON_PRETTY_PRINT')) { // use JSON pretty print
+            return json_encode(\BigCommerce\Api\v3\ObjectSerializer::sanitizeForSerialization($this), JSON_PRETTY_PRINT);
+        }
+
+        return json_encode(\BigCommerce\Api\v3\ObjectSerializer::sanitizeForSerialization($this));
+    }
+}
+
+
