# src/Model/CustomersSettingsPrivacySettings.php
@@ -1,0 +1,273 @@
+<?php
+/**
+ * CustomersSettingsPrivacySettings
+ *
+ * @package  BigCommerce\Api\v3
+ */
+
+/**
+ * BigCommerce API
+ *
+ * A Swagger Document for the BigCommmerce v3 API.
+ *
+ * OpenAPI spec version: 3.0.0b
+ * 
+ * Generated by: https://github.com/swagger-api/swagger-codegen.git
+ *
+ */
+
+/**
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen
+ * Do not edit the class manually.
+ */
+
+namespace BigCommerce\Api\v3\Model;
+
+use \ArrayAccess;
+
+class CustomersSettingsPrivacySettings implements ArrayAccess
+{
+    const DISCRIMINATOR = null;
+
+    /**
+      * The original name of the model.
+      * @var string
+      */
+    protected static $swaggerModelName = 'CustomersSettings_privacy_settings';
+
+    /**
+      * Array of property to type mappings. Used for (de)serialization
+      * @var string[]
+      */
+    protected static $swaggerTypes = [
+        'ask_shopper_for_tracking_consent' => 'bool',
+        'policy_url' => 'string',
+        'ask_shopper_for_tracking_consent_on_checkout' => 'bool'
+    ];
+
+    public static function swaggerTypes()
+    {
+        return self::$swaggerTypes;
+    }
+
+    /**
+     * Array of attributes where the key is the local name, and the value is the original name
+     * @var string[]
+     */
+    protected static $attributeMap = [
+        'ask_shopper_for_tracking_consent' => 'ask_shopper_for_tracking_consent',
+        'policy_url' => 'policy_url',
+        'ask_shopper_for_tracking_consent_on_checkout' => 'ask_shopper_for_tracking_consent_on_checkout'
+    ];
+
+    /**
+     * Array of attributes to setter functions (for deserialization of responses)
+     * @var string[]
+     */
+    protected static $setters = [
+        'ask_shopper_for_tracking_consent' => 'setAskShopperForTrackingConsent',
+        'policy_url' => 'setPolicyUrl',
+        'ask_shopper_for_tracking_consent_on_checkout' => 'setAskShopperForTrackingConsentOnCheckout'
+    ];
+
+    /**
+     * Array of attributes to getter functions (for serialization of requests)
+     * @var string[]
+     */
+    protected static $getters = [
+        'ask_shopper_for_tracking_consent' => 'getAskShopperForTrackingConsent',
+        'policy_url' => 'getPolicyUrl',
+        'ask_shopper_for_tracking_consent_on_checkout' => 'getAskShopperForTrackingConsentOnCheckout'
+    ];
+
+    public static function attributeMap()
+    {
+        return self::$attributeMap;
+    }
+
+    public static function setters()
+    {
+        return self::$setters;
+    }
+
+    public static function getters()
+    {
+        return self::$getters;
+    }
+
+    
+
+    
+
+    /**
+     * Associative array for storing property values
+     * @var mixed[]
+     */
+    protected $container = [];
+
+    /**
+     * Constructor
+     * @param mixed[] $data Associated array of property values initializing the model
+     */
+    public function __construct(array $data = [])
+    {
+        $this->container['ask_shopper_for_tracking_consent'] = array_key_exists('ask_shopper_for_tracking_consent', $data) ? $data['ask_shopper_for_tracking_consent'] : null;
+        $this->container['policy_url'] = array_key_exists('policy_url', $data) ? $data['policy_url'] : null;
+        $this->container['ask_shopper_for_tracking_consent_on_checkout'] = array_key_exists('ask_shopper_for_tracking_consent_on_checkout', $data) ? $data['ask_shopper_for_tracking_consent_on_checkout'] : null;
+    }
+
+    /**
+     * returns container
+     * @return array
+     */
+    public function get()
+    {
+        return $this->container;
+    }
+
+    /**
+     * show all the invalid properties with reasons.
+     *
+     * @return array invalid properties with reasons
+     */
+    public function listInvalidProperties()
+    {
+        $invalid_properties = [];
+        return $invalid_properties;
+    }
+
+    /**
+     * validate all the properties in the model
+     * return true if all passed
+     *
+     * @return bool True if all properteis are valid
+     */
+    public function valid()
+    {
+        return true;
+    }
+
+
+    /**
+     * Gets ask_shopper_for_tracking_consent
+     * @return bool
+     */
+    public function getAskShopperForTrackingConsent()
+    {
+        return $this->container['ask_shopper_for_tracking_consent'];
+    }
+
+    /**
+     * Sets ask_shopper_for_tracking_consent
+     * @param bool $ask_shopper_for_tracking_consent
+     * @return $this
+     */
+    public function setAskShopperForTrackingConsent($ask_shopper_for_tracking_consent)
+    {
+        $this->container['ask_shopper_for_tracking_consent'] = $ask_shopper_for_tracking_consent;
+
+        return $this;
+    }
+
+    /**
+     * Gets policy_url
+     * @return string
+     */
+    public function getPolicyUrl()
+    {
+        return $this->container['policy_url'];
+    }
+
+    /**
+     * Sets policy_url
+     * @param string $policy_url
+     * @return $this
+     */
+    public function setPolicyUrl($policy_url)
+    {
+        $this->container['policy_url'] = $policy_url;
+
+        return $this;
+    }
+
+    /**
+     * Gets ask_shopper_for_tracking_consent_on_checkout
+     * @return bool
+     */
+    public function getAskShopperForTrackingConsentOnCheckout()
+    {
+        return $this->container['ask_shopper_for_tracking_consent_on_checkout'];
+    }
+
+    /**
+     * Sets ask_shopper_for_tracking_consent_on_checkout
+     * @param bool $ask_shopper_for_tracking_consent_on_checkout
+     * @return $this
+     */
+    public function setAskShopperForTrackingConsentOnCheckout($ask_shopper_for_tracking_consent_on_checkout)
+    {
+        $this->container['ask_shopper_for_tracking_consent_on_checkout'] = $ask_shopper_for_tracking_consent_on_checkout;
+
+        return $this;
+    }
+    /**
+     * Returns true if offset exists. False otherwise.
+     * @param  integer $offset Offset
+     * @return boolean
+     */
+    public function offsetExists($offset)
+    {
+        return isset($this->container[$offset]);
+    }
+
+    /**
+     * Gets offset.
+     * @param  integer $offset Offset
+     * @return mixed
+     */
+    public function offsetGet($offset)
+    {
+        return isset($this->container[$offset]) ? $this->container[$offset] : null;
+    }
+
+    /**
+     * Sets value based on offset.
+     * @param  integer $offset Offset
+     * @param  mixed   $value  Value to be set
+     * @return void
+     */
+    public function offsetSet($offset, $value)
+    {
+        if (is_null($offset)) {
+            $this->container[] = $value;
+        } else {
+            $this->container[$offset] = $value;
+        }
+    }
+
+    /**
+     * Unsets offset.
+     * @param  integer $offset Offset
+     * @return void
+     */
+    public function offsetUnset($offset)
+    {
+        unset($this->container[$offset]);
+    }
+
+    /**
+     * Gets the string presentation of the object
+     * @return string
+     */
+    public function __toString()
+    {
+        if (defined('JSON_PRETTY_PRINT')) { // use JSON pretty print
+            return json_encode(\BigCommerce\Api\v3\ObjectSerializer::sanitizeForSerialization($this), JSON_PRETTY_PRINT);
+        }
+
+        return json_encode(\BigCommerce\Api\v3\ObjectSerializer::sanitizeForSerialization($this));
+    }
+}
+
+
